# FindOmni

./: README.md
src/: index.html  index.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  manager.rs  search.rs
