[package]
name = "findomni"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "findomni_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.5", features = [] }

[dependencies]
tauri = { version = "2.2.3", features = [] }
tauri-plugin-opener = "2.2.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4.25"
device_query = "2.1.0"
rdev = "0.5.3"  #hotkey listener
rayon = "1.10.0"    #filesearch
walkdir = "2.5.0"   #filesearch
tokio = { version = "1", features = ["full"] }
regex = "1.11.1"

[dependencies.tauri-plugin-log]
version = "2.2.0"

[features]
default = ["app-lib"]
app-lib = []
